--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,5 +40,7 @@ jobs:
         run: echo ::set-output name=version::$(cat /Users/yogeshkannan/actions-runner/password)
       
       - name: Test password
-        run: echo ${{ steps.password.outputs.version }}
+        run: echo "password is $password"
+        env:
+          password: ${{ steps.password.outputs.version }}
         
